--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.29.0
 pandas==2.1.4
 plotly==5.18.0
-colorama==0.4.6
+plotly-express==0.4.1
+numpy==1.24.3
 scikit-learn==1.3.2
-numpy==1.26.2
-sentence-transformers==2.2.2
-torch==2.1.2
+colorama==0.4.6
