--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-streamlit==1.29.0
+
+numpy==1.24.3
 pandas==2.1.4
+
+
 plotly==5.18.0
 plotly-express==0.4.1
-numpy==1.24.3
+tenacity==8.2.3
+packaging==23.2
+
 scikit-learn==1.3.2
+
+streamlit==1.29.0
 colorama==0.4.6
+
+python-dateutil==2.8.2
+six==1.16.0
+pytz==2023.3
+typing-extensions==4.8.0
