--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
+# Core dependencies
+numpy>=1.26.0,<1.27.0
+pandas>=2.1.4,<2.2.0
+streamlit==1.29.0
 
-numpy==1.24.3
-pandas==2.1.4
-
-
+# Visualization
 plotly==5.18.0
 plotly-express==0.4.1
-tenacity==8.2.3
-packaging==23.2
 
+# Machine Learning
 scikit-learn==1.3.2
 
-streamlit==1.29.0
+# Utils
 colorama==0.4.6
 
-python-dateutil==2.8.2
-six==1.16.0
-pytz==2023.3
-typing-extensions==4.8.0
+
+
